--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Spreadsheet::WriteExcel::Simple.
 
+1.01  Dec 27 2004
+	- Added save() method [Terrence Brannon]
+
 0.03  Sun Sep 22 2002
 	- Moved row counter to object data so that multiple executions would
 	  run more smoothly. (thanks to Drew Taylor)
