--- a/Changes
+++ b/Changes
@@ -1,7 +1,13 @@
 Revision history for Perl extension Spreadsheet::WriteExcel::Simple.
 
+1.02  Dec 27 2004
+	- Reintegrate bizarrely unreleased 1.00 code
+
 1.01  Dec 27 2004
 	- Added save() method [Terrence Brannon]
+
+1.00  Tue Oct 15 2002
+  - Fixed tests to skip all if we don't have ParseExcel
 
 0.03  Sun Sep 22 2002
 	- Moved row counter to object data so that multiple executions would
