--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Spreadsheet::WriteExcel::Simple.
 
+1.04  Mon Jan 16 11:17:02 UTC 2006
+	- Doc tweaks
+
 1.03  Sat Sep  3 20:36:47 UTC 2005
 	- Use binmode when save()-ing file (Ken Prows)
 
